# gdext

godot-bindings/: Cargo.toml
