[package]
categories = ["game-engines", "graphics"]
edition = "2021"
keywords = ["gamedev", "godot", "engine", "ffi", "sys"]
license = "MPL-2.0"
name = "godot-bindings"
rust-version = "1.77.1"
version = "0.1.0"

# Since features are additive and we want the user to user prebuilt by default, we need to have `prebuilt-godot` as the
# default feature. However, it's not possible to _disable_ the prebuilt dependency when specifying `godot-custom` (without
# requiring no-default-features), so we unfortunately still need to depend on prebuilt and just ignore it.
# The artifact generator explicitly excludes that though (to avoid a quasi-circular dependency back to its repo).
[features]
custom-godot = ["dep:bindgen", "dep:regex", "dep:which"]
custom-godot-extheader = []
default = ["prebuilt-godot"]
prebuilt-godot = ["dep:godot4-prebuilt"]

[dependencies]
godot4-prebuilt = {optional = true, git = "https://github.com/chushi0/godot4-prebuilt", branch = "4.2"}

# Version >= 1.5.5 for security: https://blog.rust-lang.org/2022/03/08/cve-2022-24713.html
# 'unicode-gencat' needed for \d, see: https://docs.rs/regex/1.5.5/regex/#unicode-features
bindgen = {optional = true, version = "0.65", default-features = false, features = ["runtime"]}
regex = {optional = true, version = "1.5.5", default-features = false, features = ["std", "unicode-gencat"]}
which = {optional = true, version = "4"}

[dev-dependencies]
# For tests, we need regex unconditionally. Keep this in sync with above dependency.
regex = {version = "1.5.5", default-features = false, features = ["std", "unicode-gencat"]}
